# radula

./: Cargo.toml  README.md
examples/: docli.rs
src/: lib.rs  request.rs  scraper.rs  style_parser.rs
src/scraper/: header.rs
src/style_parser/: parser.rs  text_fragment.rs
tests/: scraper.rs
