[package]
name = "radula"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Semkowicz <daniel@semkowicz.pl>"]
license = "MIT"

[dependencies]
anyhow = "1.0.97"
scraper = "0.23.1"
time = { version = "0.3.41", features = ["formatting", "parsing"] }

[dev-dependencies]
clap = { version = "4.5.35", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["blocking"] }
