[package]
name = "radula"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Semkowicz <daniel@semkowicz.pl>"]
license = "MIT"

[dependencies]
anyhow = "1.0.100"
itertools = "0.14.0"
scraper = "0.25.0"
time = { version = "0.3.44", features = ["formatting", "parsing"] }

[dev-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
comfy-table = "7.2.1"
reqwest = { version = "0.13.1", features = ["blocking", "query"] }
